Refactored and formatted code

--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -1,3 +1,4 @@
+---
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
@@ -11,7 +12,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '16 16 * * 6'
+    - cron: "16 16 * * 6"
 
 jobs:
   lint:
