--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -1,3 +1,4 @@
+---
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
@@ -20,7 +21,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
   schedule:
-    - cron: '45 5 * * 4'
+    - cron: "45 5 * * 4"
 
 permissions:
   contents: read
