--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -1,3 +1,4 @@
+---
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
@@ -11,7 +12,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '18 17 * * 4'
+    - cron: "18 17 * * 4"
 
 permissions:
   contents: read
@@ -25,10 +26,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '21'
           distribution: 'temurin'
       - name: Run PMD
         id: pmd
