Refactored and formatted code

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@
 spring:
   application:
     name: gryffin-dataservices
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/gryffinHealthyFoods
   output:
     ansi:
       enabled: always
