--- a/pom.xml
+++ b/pom.xml
@@ -178,20 +178,21 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>${maven-checkstyle-plugin.version}</version>
+        <configuration>
+          <configLocation>${basedir}/style/google_checks.xml</configLocation>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <violationSeverity>info</violationSeverity>
+          <linkXRef>false</linkXRef>
+        </configuration>
         <executions>
           <execution>
+            <id>verify-style</id>
             <phase>validate</phase>
             <goals>
               <goal>check</goal>
             </goals>
-            <configuration>
-              <configLocation>${basedir}/style/google_checks.xml</configLocation>
-              <consoleOutput>true</consoleOutput>
-              <failOnViolation>true</failOnViolation>
-              <failsOnError>true</failsOnError>
-              <maxAllowedViolations>0</maxAllowedViolations>
-              <violationSeverity>warning</violationSeverity>
-            </configuration>
           </execution>
         </executions>
         <dependencies>
@@ -447,7 +448,7 @@
     <native-maven-plugin.version>0.10.6</native-maven-plugin.version>
     <!--netflix-dgs.version>10.1.2</netflix-dgs.version-->
     <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
-    <protobuf-java.version>4.30.2</protobuf-java.version>
+    <protobuf-java.version>4.31.0</protobuf-java.version>
     <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
     <sentry.version>8.12.0</sentry.version>
     <spring-grpc.version>0.8.0</spring-grpc.version>
