1. Updated jar dependencies 2. Refactored and formatted code

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v7
         env:
+          JAVA_FILE_NAME: style/google_checks.xml
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: "main"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
