1. Updated jar dependencies 2. Updated greetings.yml 3. Refactored and formatted code

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.7</version>
+    <version>3.5.8</version>
     <relativePath/>
   </parent>
 
@@ -230,6 +230,7 @@
         <groupId>org.graalvm.buildtools</groupId>
         <artifactId>native-maven-plugin</artifactId>
         <version>${native-maven-plugin.version}</version>
+        <extensions>true</extensions>
         <executions>
           <execution>
             <id>build-native</id>
@@ -437,20 +438,20 @@
     <skip-native-build>true</skip-native-build>
 
     <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
-    <checkstyle.version>12.1.1</checkstyle.version>
+    <checkstyle.version>12.1.2</checkstyle.version>
     <git-commit-id-maven-plugin.versopm>9.0.2</git-commit-id-maven-plugin.versopm>
     <graphqlcodegen-maven-plugin.version>3.0.0</graphqlcodegen-maven-plugin.version>
-    <grpc.version>1.76.0</grpc.version>
+    <grpc.version>1.77.0</grpc.version>
     <liquibase.version>5.0.1</liquibase.version>
     <logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
     <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
     <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
-    <native-maven-plugin.version>0.11.2</native-maven-plugin.version>
+    <native-maven-plugin.version>0.11.3</native-maven-plugin.version>
     <!--netflix-dgs.version>10.1.2</netflix-dgs.version-->
     <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
-    <protobuf-java.version>4.33.0</protobuf-java.version>
+    <protobuf-java.version>4.33.11</protobuf-java.version>
     <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
-    <sentry.version>8.25.0</sentry.version>
+    <sentry.version>8.26.0</sentry.version>
     <spring-grpc.version>0.12.0</spring-grpc.version>
   </properties>
 
