--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
       <dependency>
         <groupId>org.springframework.grpc</groupId>
         <artifactId>spring-grpc-dependencies</artifactId>
-        <version>${spring-grpc.version}</version>
+        <version>${spring-grpc-dependencies.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -439,8 +439,8 @@
 
     <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
     <checkstyle.version>12.2.0</checkstyle.version>
-    <git-commit-id-maven-plugin.versopm>9.0.2</git-commit-id-maven-plugin.versopm>
-    <graphqlcodegen-maven-plugin.version>3.0.0</graphqlcodegen-maven-plugin.version>
+    <git-commit-id-maven-plugin.version>9.0.2</git-commit-id-maven-plugin.version>
+    <!-- graphqlcodegen-maven-plugin.version>3.0.0</graphqlcodegen-maven-plugin.version -->
     <grpc.version>1.77.0</grpc.version>
     <liquibase.version>5.0.1</liquibase.version>
     <logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
@@ -449,10 +449,10 @@
     <native-maven-plugin.version>0.11.3</native-maven-plugin.version>
     <!--netflix-dgs.version>10.1.2</netflix-dgs.version-->
     <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
-    <protobuf-java.version>4.33.11</protobuf-java.version>
+    <protobuf-java.version>4.33.1</protobuf-java.version>
     <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
-    <sentry.version>8.27.1</sentry.version>
-    <spring-grpc.version>0.12.0</spring-grpc.version>
+    <sentry.version>8.28.0</sentry.version>
+    <spring-grpc-dependencies.version>1.0.0</spring-grpc-dependencies.version>
   </properties>
 
   <profiles>
